--- a/pom.xml
+++ b/pom.xml
@@ -7,4 +7,20 @@
   <modules>
   	<module>mysite2</module>
   </modules>
+  
+  <build>
+		<!-- jenkins -->
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+			    <artifactId>tomcat7-maven-plugin</artifactId>
+			    <version>2.2</version>
+			    <configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>tomcat-poscodx</server>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 </project>
