--- a/mysite2/src/main/webapp/WEB-INF/web.xml
+++ b/mysite2/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>mysite2</display-name>
+  
+  <!-- Servlet Mapping -->
   <servlet>
     <servlet-name>MainServlet</servlet-name>
     <servlet-class>com.poscodx.mysite.controller.MainServlet</servlet-class>
@@ -13,6 +15,34 @@
     <servlet-name>MainServlet</servlet-name>
     <url-pattern>/main</url-pattern>
   </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>UserServlet</servlet-name>
+    <servlet-class>com.poscodx.mysite.controller.UserServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>UserServlet</servlet-name>
+    <url-pattern>/user</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <servlet-name>GuestbookServlet</servlet-name>
+    <servlet-class>com.poscodx.mysite.controller.GuestbookServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>GuestbookServlet</servlet-name>
+    <url-pattern>/guestbook</url-pattern>
+  </servlet-mapping>
+  
+  <!-- Common Error Page -->
+ <!-- 
+  <error-page>
+  	<error-code>400</error-code>
+  	<location>/WEB-INF/error/400.jsp</location>
+  </error-page>
+ -->
+  
+  <!-- Default Files -->
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -21,24 +51,5 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>UserServlet</display-name>
-    <servlet-name>UserServlet</servlet-name>
-    <servlet-class>com.poscodx.mysite.controller.UserServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>UserServlet</servlet-name>
-    <url-pattern>/user</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>GuestbookServlet</display-name>
-    <servlet-name>GuestbookServlet</servlet-name>
-    <servlet-class>com.poscodx.mysite.controller.GuestbookServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>GuestbookServlet</servlet-name>
-    <url-pattern>/guestbook</url-pattern>
-  </servlet-mapping>
+  
 </web-app>
