main, includes, user JSTL

--- a/mysite2/pom.xml
+++ b/mysite2/pom.xml
@@ -22,6 +22,13 @@
 		    <artifactId>mariadb-java-client</artifactId>
 		    <version>3.2.0</version>
 		</dependency>
+		
+		<!-- jstl -->
+		<dependency>
+		    <groupId>jstl</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
 	
 		<!-- servlet -->
 		<dependency>
