--- a/mysite2/src/main/webapp/WEB-INF/web.xml
+++ b/mysite2/src/main/webapp/WEB-INF/web.xml
@@ -2,6 +2,16 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
   <display-name>mysite2</display-name>
   
+  <!-- Encoding Filter -->
+  <filter>
+  	<filter-name>EncodingFilter</filter-name>
+  	<filter-class>com.poscodx.mysite.web.EncodingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>EncodingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
   <!-- Servlet Mapping -->
   <servlet>
     <servlet-name>MainServlet</servlet-name>
