aop - measure execution time

--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -32,6 +32,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- spring aspect -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-aspects</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		
 		<!-- common dbcp -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
