--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -65,6 +65,18 @@
 			<version>2.0.7</version>
 		</dependency>
 		
+		<!-- common fileupload -->
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+		</dependency>
+		
 		<!-- jstl -->
 		<dependency>
 		    <groupId>jstl</groupId>
