--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -93,6 +93,13 @@
 		    <version>1.2</version>
 		</dependency>
 		
+		<!-- jackson -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.4.1</version>
+		</dependency>
+		
 		<!-- logback(slf4j) -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
