--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -74,6 +74,13 @@
 			<version>2.0.7</version>
 		</dependency>
 		
+		<!-- validation -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.2.3.Final</version>
+		</dependency>
+		
 		<!-- common fileupload -->
 		<dependency>
 			<groupId>commons-fileupload</groupId>
