--- a/mysite5/pom.xml
+++ b/mysite5/pom.xml
@@ -17,7 +17,8 @@
 		<maven.compiler.target>17</maven.compiler.target>
 		<org.springframework-version>5.3.36</org.springframework-version>
 	    <jcloverslf4j.version>1.7.36</jcloverslf4j.version>		
-    	<logback.version>1.2.11</logback.version>	
+    	<logback.version>1.2.11</logback.version>
+		<org.springframework.security-version>5.8.8</org.springframework.security-version>
 	</properties>
 	
 	<dependencies>
@@ -48,7 +49,28 @@
 			<artifactId>spring-aspects</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-				
+		
+		<!-- spring security web -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>
+
+		<!-- spring security config -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>
+
+		<!-- spring security tag library -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${org.springframework.security-version}</version>
+		</dependency>
+						
 		<!-- common dbcp -->
 		<dependency>
 			<groupId>commons-dbcp</groupId>
@@ -138,5 +160,5 @@
 	
 	<build>
 		<finalName>mysite5</finalName>
-	</build>
+	</build>		
 </project>
