--- a/mysite6/src/main/resources/application.yml
+++ b/mysite6/src/main/resources/application.yml
@@ -15,12 +15,30 @@ spring:
 
    # mvc            
    mvc:
-      view:
-         prefix: /WEB-INF/views/
-         suffix: .jsp
+      static-path-pattern: /assets/**
+      throw-exception-if-no-handler-found: true
+      # view:
+      #   prefix: /WEB-INF/views/
+      #   suffix: .jsp
 
-
-
+   # web
+   web:
+      resources:
+         static-locations: file:/mysite-uploads/, classpath:assets/
+   
+   # message resources(i18n)
+   messages:
+      basename: messages/message
+      encoding: utf-8
+      always-use-message-format: true
+      
+   # multipart
+   servlet:
+      multipart:
+         enabled: true
+         max-file-size: 50MB
+         max-request-size: 10MB
+         
    # datasource
    datasource:
       driver-class-name: org.mariadb.jdbc.Driver
@@ -43,9 +61,11 @@ server:
       encoding:
          charset: utf-8
          enabled: true
-
-
+   error:
+      whitelabel:
+         enabled: false
+      path: /error
 
 # logging
 logging:
-  config: classpath:logback.xml
+  config: classpath:logback.xml         
