--- a/mysite7/pom.xml
+++ b/mysite7/pom.xml
@@ -66,6 +66,12 @@
 			<version>2.2.0</version>
 		</dependency>
 
+		<!-- Thymeleaf Starter --> 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		
 		<!-- Spring Security Tag Library -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
