--- a/mysite7/pom.xml
+++ b/mysite7/pom.xml
@@ -74,8 +74,8 @@
 		
 		<!-- Spring Security Tag Library -->
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-taglibs</artifactId>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
 		
 		<!-- Mariadb JDBC -->
