--- a/mysite3/pom.xml
+++ b/mysite3/pom.xml
@@ -5,8 +5,8 @@
 	
 	<groupId>com.poscodx</groupId>
 	<artifactId>mysite3</artifactId>
-	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -136,5 +136,16 @@
 	
 	<build>
 		<finalName>mysite3</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+		    	<artifactId>tomcat7-maven-plugin</artifactId>
+		    	<version>2.2</version>
+		    	<configuration>
+					<url>${tomcat.deploy.url}</url>
+					<server>tomcat-poscodx</server>
+				</configuration>
+			</plugin>
+		</plugins>		
 	</build>	
 </project>
